--- a/src/pages/Services/services.scss
+++ b/src/pages/Services/services.scss
@@ -4,7 +4,7 @@
 
 .services_container {
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   @include flexbox(column, center, center);
   background-color: rgb(198, 198, 187);
   background-color: rgb(245, 245, 231);
