--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -2,3 +2,13 @@
 @use "./mixins" as *; 
 @use "./reset" as *; 
 
+.layout {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+  }
+  
+  .main-content {
+    flex-grow: 1; 
+    padding-top: 100px;
+  }
